# mymcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.intellij-example.yaml  config.yaml  config.yaml.example  cursor-mcp-config.json.example  pyproject.toml  run_mcp.sh  setup_cursor_mcp.sh  test_basic.py
docs/: MCP_使用心得.md  README.md  design.md  uvx-deployment.md
docs/development/: IMPLEMENTATION.md  MCP_COMPATIBILITY.md  OPTIMIZATION.md  RAINBOW_MCP_FIX.md  RAINBOW_MCP_STATUS.md  RAINBOW_MCP_TROUBLESHOOTING.md  RAINBOW_MCP_VERIFICATION.md  SUMMARY.md
docs/guides/: CURSOR_TEST_GUIDE.md
docs/integration/: QUICK_START_INTELLIJ.md  TEST_INTELLIJ.md  intellij-integration.md
docs/requirements/: IMPLEMENTATION_SUMMARY.md  TOOL_PROXY_OPTIMIZATION.md  TOOL_PROXY_USAGE.md
scripts/: check_mcp_version.py  example.py  test_rainbow_connection.py  test_tapd_connection.py
src/: __init__.py  __main__.py  mcp_server.py
src/admin/: __init__.py  routes.py  server.py
src/admin/static/css/: style.css
src/admin/static/js/: commands.js  main.js  modals.js  servers.js  utils.js
src/admin/templates/: index.html
src/auth/: __init__.py  manager.py
src/command/: __init__.py  executor.py  manager.py
src/config/: manager.py  models.py
src/mcp_client/: __init__.py  client.py  connection.py  manager.py
src/tool_index/: __init__.py  manager.py  models.py  search_engine.py
src/tool_proxy/: __init__.py  tools.py
src/utils/: logging_config.py  port_check.py
